fixed "Die Liste bei den Testteilnahmen scrollbar machen und nicht ewig lang werden lassen"

--- a/src/app/course/course.component.css
+++ b/src/app/course/course.component.css
@@ -5,14 +5,27 @@ mat-card {
 .full-width {
   width: 100%;
 }
+
 .clickable {
-    color: -webkit-link;
-    cursor: pointer;
-    text-decoration: underline;
+  color: -webkit-link;
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .quiz-result-container {
   display: flex;
   flex-direction: column;
   min-width: 300px;
+}
+
+.table-container {
+  display: flex;
+  flex-direction: column;
+  max-height: 500px;
+  min-width: 300px;
+}
+
+.mat-table {
+  overflow: auto;
+  max-height: 500px;
 }
